fixed z-index nav bar issue

--- a/style1.css
+++ b/style1.css
@@ -48,7 +48,7 @@ body {
     height: 100%;
     display: block;
 	margin-top: -400px;
-	z-index: 10;
+	
 	
 	
   }
@@ -85,7 +85,7 @@ body {
 	border-radius: 8px;
 	transition: opacity 0.3s ease-in-out;
 	opacity: 1;
-	position: relative
+	position: relative;
 	
   }
 
@@ -177,6 +177,7 @@ nav ul li
 		text-decoration: none;
 		font-size: 18px;
 		position: relative;
+		z-index: 10;
 
 	}
 		nav ul li a::after
@@ -687,6 +688,7 @@ nav .fa-solid
 		display: block;
 		font-size: 25px;
 		margin-top: 40px;
+		z-index: 10;
 		
 	}
 	nav ul 
